20250606 :: fix layout failed, when width too small #10

--- a/src/app/components/home/home.component.less
+++ b/src/app/components/home/home.component.less
@@ -22,6 +22,9 @@
   }
 
   .user-container {
+    display: flex;
+    justify-content: center;
+    padding-top: 20px;
     width: 20%;
     min-width: 200px;
     max-width: 500px;
