--- a/src/app/components/pokemon-game/poke-lotto/poke-lotto.component.less
+++ b/src/app/components/pokemon-game/poke-lotto/poke-lotto.component.less
@@ -2,7 +2,7 @@
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
-  align-items: flex-start;
+  // align-items: flex-start;
   width: 100%;
   max-width: 1700px;
   height: 100%;
@@ -103,9 +103,8 @@
 
   .pokemons-history-container {
     width: 70%;
-    min-width: 500px;
+    min-width: 700px;
     max-width: 1200px;
-    padding-left: 50px;
   }
 }
 
