--- a/src/app/components/pokemon-game/pokedex/pokedex.component.less
+++ b/src/app/components/pokemon-game/pokedex/pokedex.component.less
@@ -4,10 +4,10 @@
   justify-content: center;
   width: 100%;
   height: 100%;
+  max-height: 900px;
 
   .left-pokedex {
     width: 30%;
-    // height: 100%;
     min-width: 400px;
     max-width: 500px;
   }
@@ -15,13 +15,10 @@
   .right-poke-ball {
     display: flex;
     justify-content: center;
-    // align-items: center;
-    padding-top: 100px;
+    align-items: center;
     width: 70%;
-    // height: 100%;
     min-width: 500px;
     max-width: 1200px;
-    padding-left: 50px;
 
     .right-poke-ball-div {
       height: 700px;
