--- a/src/app/layout/main-layout/main-layout.component.less
+++ b/src/app/layout/main-layout/main-layout.component.less
@@ -8,7 +8,7 @@
 
   .main-header {
     width: calc(100vw - 20px);
-    max-width: 1800px;
+    // max-width: 1800px;
     height: 100px;
     margin: 10px;
   }
