--- a/src/app/shared/base-components/footer/footer.component.less
+++ b/src/app/shared/base-components/footer/footer.component.less
@@ -1,6 +1,13 @@
 nz-footer {
   text-align: center;
-  /* position: relative; */
-  /* bottom: 0; */
+  // display: flex;
+  // justify-content: space-between;
+  // align-items: center;
   width: 100%;
+  height: 100%;
+  padding: 10px;
+  background-color: #021024;
+  border-bottom: 1px solid #f0f0f0;
+  border-radius: 10px;
+  bottom: 0;
 }
